[5.0.0-SNAPSHOT]
- Upgrade to Gradle 8.3

[4.2.1]
- Fix existing folder-based configs being removed when a tile is removed

[4.2.0]
- Add support for grouping tiles by directory into multiple tilesets

[4.1.2]
- Fix transparent pixels not being handled correctly when background color is used

[4.1.1]
- Fix path errors for paths with spaces on Windows

[4.1.0]
- XML config now stores previously generated data
- Plugin now accepts directory as argument

[4.0.0]
- Removed Slick dependency, images now generate in headless JVM
- Added backgroundColor and premultiplyAlpha options
- Packing algorithm now packs from top-left corner outwards
- Images that are too large are now automatically split

[3.0.1]
- Improved memory consumption
- Significantly improved performance
- Fixed gradle process not terminating after completion
- Moved to org.mini2Dx maven group

[3.0.0]
- TilePacker now also available as a Gradle task
- Now uses configuration file instead of command line arguments
- Added option for preventing tearing by padding tiles by 1 border pixel

[2.0.0]
- TilePacker now uses maxRects algorithm for packing tiles

[1.1.1]
- Fixed incorrect padding calculations

[1.1.0]
- Added option for padding between tiles

[1.0.0]
- Initial release